WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124413
MediaTime addition and subtraction operators have errors when the rhs is infinite.
https://bugs.webkit.org/show_bug.cgi?id=124413
Summary
MediaTime addition and subtraction operators have errors when the rhs is infi...
Jer Noble
Reported
2013-11-15 08:26:01 PST
MediaTime addition and subtraction operators have errors when the rhs is infinite.
Attachments
Patch
(9.43 KB, patch)
2013-11-15 08:38 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-11-15 08:38:55 PST
Created
attachment 217053
[details]
Patch
WebKit Commit Bot
Comment 2
2013-11-15 10:01:34 PST
Comment on
attachment 217053
[details]
Patch Clearing flags on attachment: 217053 Committed
r159343
: <
http://trac.webkit.org/changeset/159343
>
WebKit Commit Bot
Comment 3
2013-11-15 10:01:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug